<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.corel.mfidDevoir.activities.ProductDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/normal_padding"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_product_info"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                android:padding="@dimen/normal_padding" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_txt"
                        android:padding="@dimen/normal_padding"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        />

                    <TextView
                        android:id="@+id/name_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/value_txt"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:padding="@dimen/normal_padding"
                        android:textColor="?android:attr/textColorSecondary"
                        />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description_txt"
                        android:padding="@dimen/normal_padding"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        />

                    <TextView
                        android:id="@+id/description_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/value_txt"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:padding="@dimen/normal_padding"
                        android:textColor="?android:attr/textColorSecondary"
                        />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_txt"
                        android:padding="@dimen/normal_padding"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        />

                    <TextView
                        android:id="@+id/price_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/value_txt"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:padding="@dimen/normal_padding"
                        android:textColor="?android:attr/textColorSecondary"
                        />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity_txt"
                        android:padding="@dimen/normal_padding"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        />

                    <TextView
                        android:id="@+id/quantity_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/value_txt"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:padding="@dimen/normal_padding"
                        android:textColor="?android:attr/textColorSecondary"
                        />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alert_quantity_txt"
                        android:padding="@dimen/normal_padding"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        />

                    <TextView
                        android:id="@+id/alert_quantity_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/value_txt"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:padding="@dimen/normal_padding"
                        android:textColor="?android:attr/textColorSecondary"
                        />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>